host-namespaces/example_disallowed3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-namespace-disallowed3
  labels:
    app: nginx-host-namespace
spec:
  hostPID: true
  containers:
  - name: nginx
    image: nginx
